# git-cache-http-server

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.hxml  git-cache-http-server.js  hmm.json  implementation_notes.md  package.json
doc/: git-cache-http-server.service
src/: BuildUtils.hx  HttpsProxyAgent.hx  Main.hx  Version.hx  git.rs  lib.rs  main.rs
src/js/npm/: Docopt.hx
