[package]
name = "git-cache-http-server"
version = "0.1.0"
authors = ["Jonas Malaco <jonas@protocubo.io>"]
edition = "2018"

[dependencies]
base64 = "0.12"
futures = "0.3"
hyper = "0.13"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "process"] }
git2 = "0.13"

[dev-dependencies]
tempfile = "3"
