[package]
name = "git-cache-http-server"
version = "0.1.0"
authors = ["Jonas Malaco <jonas@protocubo.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.12"
futures = "0.3"
hyper = "0.13"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "process"] }
url = "2.1"
semver = "0.10"

[dev-dependencies]
tempfile = "3"
